# vire-gap

./: CLAUDE.md  Makefile  README.md  pyproject.toml
script/: install-agents.sh
src/vire/: __init__.py  core.py
src/vire_gap/: __init__.py  args.py  gitver.py
tests/: test_args.py  test_vire.py
