[project]
name = "vire-gap"
version = "0.1.0"
description = "Utilities for the Gemini Enterprise Agent Platform (type-driven argparse and more)"
readme = "README.md"
authors = [
    { name = "Joachim Bargsten", email = "jw@bargsten.org" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
norecursedirs = [
    "tests/testkit"
]

[tool.ruff]
line-length=111

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.basedpyright]
reportUnusedCallResult = false
reportUnusedExpression = false
